@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST dm-migrations-0.9.7.gem 19456 RMD160 f0c001db7f5fd951281b6e0c77ed9eb4aa76de69 SHA1 470697ad96f37e457182b9f0b6f83d358cc68a7b SHA256 7893ac82eb5e7b15a7d513c5cfb9d82c62e3d799e57579df6cdcfabf4d0efe1f
+DIST dm-migrations-1.0.0.gem 34304 RMD160 722933a83000b380491cece35631473665bd1692 SHA1 fee8213ee03405de2101d536cda0f567787b3c62 SHA256 b6c0e665369c3fb86eb526767f1749882405eb98548d7ac57fa5fc4a4c11c18f
 EBUILD dm-migrations-0.9.7.ebuild 360 RMD160 0a3aa5e33b3b4b585fa053643f57db25fb7c649a SHA1 c61d5e235d9fafb8a50f3362d2f56c4a55e01b2e SHA256 710ff404eb35800379cd25a798a70cf1d64c44484802087ec8644e8b30d7bfed
-MISC ChangeLog 283 RMD160 c1ea191d168efb6f1cc87d8b5f10b85261e09bc1 SHA1 9ae069b4988278484902edd926da980df8c9a132 SHA256 7bbb09438caffa5f10eeed5de466a3866d5f01084b7bc66bd1019b99ed68797c
+EBUILD dm-migrations-1.0.0.ebuild 756 RMD160 7af7e2070b94f4715497b162870074d1044e4d6b SHA1 adc448a03edbe8c6d5fc2a3938cfaf3b5182ad9f SHA256 858cd4232c895532e9d5eafd82168ac00ab8d9038ca82aac87ccbc46065fed2b
+MISC ChangeLog 442 RMD160 b3ff408b68bf38436f925bc16443c38cf74a5057 SHA1 99dda092d9a694cb23b6b55f528bdf770dd63aad SHA256 43bd0b0e5328d892c73f37ee5126f2806c35f9c2dc721542508262a96cc10a81
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAkxvcGsACgkQZihJkut28Sv3qQD/S1fsXLHzNE6tqSkimkZEXWyV
+vhl/uBst2nNpYcEzZAsA/1voEofWvgvgOv3uKx/rsQr6RPU4s4QQP08Py2ycaJgg
+=83J5
+-----END PGP SIGNATURE-----
