@@ -1,0 +1,31 @@
+# Copyright 1999-2010 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: $
+
+EAPI=2
+USE_RUBY="ruby18"
+
+RUBY_FAKEGEM_TASK_DOC="yard"
+RUBY_FAKEGEM_DOCDIR="doc"
+RUBY_FAKEGEM_EXTRADOC="README.rdoc"
+
+RUBY_FAKEGEM_TASK_TEST="spec"
+
+inherit ruby-fakegem
+
+DESCRIPTION="DataMapper plugin for writing and specing migrations"
+HOMEPAGE="http://github.com/sam/dm-more/tree/master/dm-migrations"
+
+LICENSE="MIT"
+SLOT="0"
+KEYWORDS="~x86 ~amd64"
+IUSE=""
+
+# Tests fail with load errors, possibly due to unfulfilled
+# dependencies. Needs ot be investigated before moved to main tree.
+RESTRICT="test"
+
+ruby_add_bdepend "doc? ( dev-ruby/yard )"
+#ruby_add_bdepend "test? ( dev-ruby/rspec )"
+
+ruby_add_rdepend "=dev-ruby/dm-core-1.0*"
